--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "build": "netlify-lambda build ./",
-    "new": "netlify-lambda serve ./",
+    "serve": "netlify-lambda serve ./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "netlify-lambda": "^1.6.3",
     "serverless-http": "^2.4.1",
     "telegraf": "^3.38.0"
