--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "netlify-lambda build ./",
-    "serve": "netlify-lambda serve ./",
+    "build": "netlify-lambda build ./src -c ./webpack.functions.js",
+    "serve": "netlify-lambda serve ./src -c ./webpack.functions.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "encoding": "^0.1.12",
     "express": "^4.17.1",
     "netlify-lambda": "^1.6.3",
+    "node-fetch": "^2.6.0",
     "serverless-http": "^2.4.1",
     "telegraf": "^3.38.0"
   }
