--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   command = "npm install && npm run build"
   functions = "functions"
 [[redirects]]
-  from = "/api/extension/proxy"
-  to = "/.netlify/functions/api/extension/proxy"
+  from = "/index"
+  to = "/.netlify/functions/index"
   force = false
   status = 200
