--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "encoding": "^0.1.12",
     "express": "^4.17.1",
     "netlify-lambda": "^1.6.3",
