--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^8.2.0",
     "encoding": "^0.1.12",
     "express": "^4.17.1",
     "netlify-lambda": "^1.6.3",
     "node-fetch": "^2.6.0",
     "serverless-http": "^2.4.1",
     "telegraf": "^3.38.0"
+  },
+  "devDependencies": {
+    "dotenv-webpack": "^1.8.0"
   }
 }
